trunk/Archive2/e3/7d0bd6b64aee6e/main.cpp
#include <iostream>
#include <string>
#include <vector>

struct mystruct
{
    mystruct(int){
    }
}

int main()
{
    std::vector<mystruct> words(10);
}
